# crazyswarm2

crazyflie/config/: crazyflies.yaml  motion_capture.yaml
crazyflie/scripts/: crazyflie_server.py
crazyflie_examples/: setup.cfg
crazyflie_examples/crazyflie_examples/: circumnavigation.py  hello_world.py  hello_world2.py  hello_world3.py  main_sketch_codeV1.py  main_sketch_codeV2.py  main_sketch_codeV3.py  main_sketch_codeV4.py  main_sketch_codeV4_rep.py  nice_hover.py  plot_util.py  plume_rv_V4.py  sketch.py
crazyflie_interfaces/: CMakeLists.txt
crazyflie_interfaces/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
crazyflie_interfaces/install/crazyflie_interfaces/include/crazyflie_interfaces/crazyflie_interfaces/msg/: attitude_setpoint.h  hover.hpp  log_block.hpp
crazyflie_interfaces/install/crazyflie_interfaces/include/crazyflie_interfaces/crazyflie_interfaces/srv/: add_logging.hpp  go_to.hpp  land2.hpp  set_group_mask.hpp  stop.hpp  takeoff.hpp  upload_trajectory.hpp
crazyflie_interfaces/install/crazyflie_interfaces/share/crazyflie_interfaces/: package.sh
crazyflie_interfaces/install/crazyflie_interfaces/share/crazyflie_interfaces/msg/: AttitudeSetpoint.idl
crazyflie_interfaces/install/crazyflie_interfaces/share/crazyflie_interfaces/srv/: Land2.idl
crazyflie_interfaces/log/: latest_build
crazyflie_interfaces/msg/: VelocityWorld.msg
crazyflie_interfaces/srv/: VelWorld.srv
crazyflie_py/crazyflie_py/: crazyflie.py
(+15 files in other folders)
