[options.entry_points]
console_scripts =
    hello_world = crazyflie_examples.hello_world:main
    hello_world2 = crazyflie_examples.hello_world2:main
    hello_world3 = crazyflie_examples.hello_world3:main
    nice_hover = crazyflie_examples.nice_hover:main
    bennett = crazyflie_examples.bennett:main
    main_sketch_code_big_plume = crazyflie_examples.main_sketch_code_big_plume:main
    figure8 = crazyflie_examples.figure8:main
    plot_util = crazyflie_examples.plot_util:main
    sketch = crazyflie_examples.sketch:main
    main_sketch_codeV1 = crazyflie_examples.main_sketch_codeV1:main
    main_sketch_codeV2 = crazyflie_examples.main_sketch_codeV2:main
    main_sketch_codeV3 = crazyflie_examples.main_sketch_codeV3:main
    main_sketch_codeV4 = crazyflie_examples.main_sketch_codeV4:main
    main_sketch_codeV4_rep = crazyflie_examples.main_sketch_codeV4_rep:main
    circumnavigation = crazyflie_examples.circumnavigation:main
    plume_rv = crazyflie_examples.plume_rv:main
    plume_rv_V4 = crazyflie_examples.plume_rv_V4:main
    cf_2_correccion = crazyflie_examples.cf_2_correccion:main
    multi_trajectory = crazyflie_examples.multi_trajectory:main
    cmd_full_state = crazyflie_examples.cmd_full_state:main
    set_param = crazyflie_examples.set_param:main
